--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         </div>
 
         </div>
-        <br><br><br>
-        <div class="container">
-            <div class="itm">
+      
+        <section class="container about">
+            <div class="aboutimg">
                 <img src="about.png">
             </div>
-            <div class="itm">
+            <div class="aboutinfo">
                 <h2>let’s <br>
                     Introduce about <br>
                     myself</h2>
@@ -52,8 +52,9 @@
                     is in beast beginning signs open god you're gathering whose gathered cattle let.
                     Creature whales fruit unto meat the life beginning all in under give two.
                     </p>
+                    <button>Download CV</button>
                     </div>
-            </div>
+            </section>
         </div>
     </body>
 </html>
